# seed-ai

./: MANIFEST.in  README.md  bootload  install  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: permissions.yml  public-access.yml  publish.yml  scripts.yml  test.yml
Formula/: seed-ai.rb
bootstrap/: install.sh
docs/: SUPER_SECRET_README.md  installation.md
scripts/: README.md  create_launcher.sh  diagnose.sh  install.sh
seed/: __init__.py  __main__.py  cli.py  core.py  dashboard.py  exceptions.py  preflight.py
seed/capability/: __init__.py  base.py
seed/cli/: __init__.py  commands.py  core.py
seed/config/: default_config.yaml
seed/core/: __init__.py  config.py  preflight.py  runtime.py
seed/dashboard/: __init__.py  app.py  base.py  components.py
seed/install/: __init__.py  commands.py  config.py  installer.py
seed/integrations/: __init__.py  api_manager.py  base.py  config.py  github.py  search.py
seed/network/: __init__.py  core.py  discovery.py  metrics.py  security.py
seed/runtime/: __init__.py  config.py  states.py
seed/tasks/: __init__.py  queue.py  templates.py  workflow.py
seed_ai/: __init__.py
seed_ai/capabilities/: __init__.py  conversation.py  task_executor.py
seed_ai/core/: agent.py
seed_ai/integrations/: local_github.py
seed_ai/security/: __init__.py  sandbox.py
seed_ai/templates/: __init__.py  base.py  loader.py  validator.py
tests/: conftest.py  test_config.yaml
tests/capabilities/: conftest.py  test_conversation.py  test_task_executor.py
(+5 files in other folders)
