[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-ai-framework"
version = "0.1.0"
description = "Scalable Ecosystem for Evolving Digital Agents"
authors = [{name = "SEED AI Framework Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Administratum227/seed-ai"
Repository = "https://github.com/Administratum227/seed-ai.git"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3